se soluciono error con cover

--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -9,7 +9,7 @@
 					<div class="col-sm-12 col-md-3">
 						<ul class="list-group">
 							<li class="list-group-item">
-								<img src="{{ item.cover_x256.url }}" width=100% />
+								<img src="{{ item.cover }}" width=100% />
 							</li>
 							<li class="list-group-item">nombre: {{ item.name }}</li>
 							<li class="list-group-item">precio: {{ item.price }} COP</li>
