se genera el formulario automaticamente

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<title>shoping</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+		{% block header %}
+		{% endblock header %}
 	</head>
 	<body>
 		{% block content %}
