--- a/shop/templates/shop/car_shop_list.html
+++ b/shop/templates/shop/car_shop_list.html
@@ -3,6 +3,8 @@
 {% block content %}
     <div class="container">
         <div class="row">
+            <form method="post" action="{% url 'car_shop_security' %}">
+            {% csrf_token %}
             {% for item in object_list %}
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-group">
@@ -11,6 +13,7 @@
                         </li>
                         <li class="list-group-item">nombre: {{ item.name }}</li>
                         <li class="list-group-item">precio: {{ item.price }} COP</li>
+                        <input name="item" type="hidden" value="{{ item.pk }}">
                     </ul>
                 </div>
             {% empty %}
@@ -18,45 +21,8 @@
             {% endfor %}
         </div>
         {% if total %}
-            precio total: {{ total }} COP
-            <form id="frm_botonePayco" name="frm_botonePayco" method="post" action="https://secure.payco.co/checkout.php">
-                <!-- Id del comercio propietario de la aplicación -->
-                <input name="p_cust_id_cliente" type="hidden" value="17034">
-                <!-- Llave de seguridad del comercio propietario de la aplicación -->
-                <input name="p_key" type="hidden" value="a29d222db99a3ad602e6aeaca5b274cf055c70ea">
-                <!-- Id de la factura -->
-                <input name="p_id_invoice" type="hidden" value="">
-                <!-- Descripción del producto -->
-                <input name="p_description" type="hidden" value="nombre de la compra">
-                <!-- Código de la moneda (COP,USD) -->
-                <input name="p_currency_code" type="hidden" value="COP">
-                <!-- Valor total del producto -->
-                <input name="p_amount" id="p_amount" type="hidden"
-                value="30000.00">
-                <!-- IVA -->
-                <input name="p_tax" id="p_tax" type="hidden" value="0">
-                <!-- Valor sin IVA -->
-                <input name="p_amount_base" id="p_amount_base" type="hidden" value="0">
-                <!-- Fase de integración (TRUE: en pruebas, FALSE: en producción) -->
-                <input name="p_test_request" type="hidden" value="TRUE">
-                <!-- firma para validar los datos y no sean modificados
-                     desde el cliente web, cifrado con md5
-
-                    p_signature = (p_cust_id_cliente+p_key+p_id_invoice+p_amount+p_currency_code)
-                    separadas por el carácter '^'
-                -->
-                <input name="p_signature" type="hidden" id="signature"
-                value="028393912cfe45fd56226f3a61ea8a79" />
-
-                <!-- -->
-                <input name="p_url_response" type="hidden"
-                value="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% url 'item_list' %}">
-                <!-- -->
-                <input name="p_url_confirmation" type="hidden"
-                value="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% url 'confirmation' %}">
-                <!-- -->
-                <input type="image" id="imagen" src="https://369969691f476073508a-60bf0867add971908d4f26a64519c2aa.ssl.cf5.rackcdn.com/btns/boton_carro_de_compras_epayco2.png" />
-            </form>
+                <input type="image" src="https://369969691f476073508a-60bf0867add971908d4f26a64519c2aa.ssl.cf5.rackcdn.com/btns/boton_carro_de_compras_epayco2.png" />
         {% endif %}
+        </form>
     </div>
 {% endblock content %}
