--- a/shop/templates/shop/car_shop_list.html
+++ b/shop/templates/shop/car_shop_list.html
@@ -5,22 +5,34 @@
         <div class="row">
             <form method="post" action="{% url 'car_shop_security' %}">
             {% csrf_token %}
-            {% for item in object_list %}
-                <div class="col-sm-12 col-md-3">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <img src="{{ item.cover }}" width=100% />
-                        </li>
-                        <li class="list-group-item">nombre: {{ item.name }}</li>
-                        <li class="list-group-item">precio: {{ item.price }} COP</li>
-                        <input name="item" type="hidden" value="{{ item.pk }}">
-                    </ul>
-                </div>
-            {% empty %}
-                <div class="col-sm-12">No hay articulos todavia.</div>
-            {% endfor %}
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Precio</th>
+                        <th>Cover</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for item in object_list %}
+                    <tr>
+                        <td>{{item.name}}</td>
+                        <td>{{iem.price}}</td>
+                        <td>
+                            <a href="{{item.cover}}" target="_blank">
+                                <img src="{{ item.cover }}" width=100% />
+                            </a>
+                        </td>
+                    </tr>
+                    <input name="item" type="hidden" value="{{ item.pk }}">
+                {% empty %}
+                    <div class="col-sm-12">No hay articulos todavia.</div>
+                {% endfor %}
+                </tbody>
+                </table>
         </div>
         {% if total %}
+                precio total: {{ total }} COP
                 <input type="image" src="https://369969691f476073508a-60bf0867add971908d4f26a64519c2aa.ssl.cf5.rackcdn.com/btns/boton_carro_de_compras_epayco2.png" />
         {% endif %}
         </form>
